insertion medias queries

--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,12 @@ a {
     margin: 10px 15px;
   }
 
+  #background-image {
+    -o-object-fit: cover;
+    object-fit: cover;
+    height: 350px;
+  }
+
   #button-commander {
     margin-left: 41%;
   }
@@ -691,6 +697,28 @@ a {
     transition: 0.4s;
   }
 
+  .menu-content h3,
+.menu-content p {
+    font-size: 1.1rem;
+  }
+
+  .menu-detail {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    padding: 0;
+  }
+
+  .choice-1,
+.choice-2,
+.choice-3,
+.choice-4 {
+    width: 60%;
+  }
+
   #button-commander {
     margin-left: 43%;
   }
@@ -726,6 +754,22 @@ a {
   .restaurants .box-restaurant {
     height: 20vw;
     width: 47%;
+  }
+
+  .menu-detail {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+  }
+
+  .choice-1,
+.choice-2,
+.choice-3,
+.choice-4 {
+    width: 98%;
   }
 
   #button-commander {
