--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ a {
 }
 
 .restaurant-name {
-  background: #f6f6f6;
+  background: #ffffff;
   padding-top: 10px;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
@@ -554,7 +554,7 @@ a {
 
 .menu-content h3,
 .menu-content p {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   margin-bottom: 5px;
   margin-top: 5px;
   white-space: nowrap;
@@ -563,7 +563,7 @@ a {
 }
 
 .price {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-weight: bold;
   align-self: flex-end;
   margin: 15px;
@@ -697,9 +697,17 @@ a {
     transition: 0.4s;
   }
 
+  .restaurant-title {
+    margin-left: 2%;
+  }
+
   .menu-content h3,
 .menu-content p {
-    font-size: 1.1rem;
+    font-size: 0.88rem;
+  }
+
+  .price {
+    font-size: 0.88rem;
   }
 
   .menu-detail {
@@ -709,18 +717,11 @@ a {
     justify-content: center;
     align-items: stretch;
     align-content: stretch;
-    padding: 0;
-  }
-
-  .choice-1,
-.choice-2,
-.choice-3,
-.choice-4 {
-    width: 60%;
   }
 
   #button-commander {
-    margin-left: 43%;
+    margin-left: 44%;
+    margin-top: 3%;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -769,12 +770,31 @@ a {
 .choice-2,
 .choice-3,
 .choice-4 {
-    width: 98%;
+    width: 96%;
+  }
+
+  .restaurant-title {
+    font-size: 1.8rem;
+    margin-left: 2%;
+  }
+
+  .menu-title {
+    font-size: 1.4rem;
+  }
+
+  .menu-content h3,
+.menu-content p {
+    font-size: 1.2rem;
+  }
+
+  .price {
+    font-size: 1.2rem;
   }
 
   #button-commander {
     margin-left: 44.5%;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    margin-top: 3%;
   }
 }
 
