--- a/sass/main.scss
+++ b/sass/main.scss
@@ -368,7 +368,7 @@ a{
     margin-left: 8%;
   }
   .restaurant-name {
-    background: #f6f6f6;
+    background: #ffffff;
     padding-top: 10px;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
@@ -495,8 +495,8 @@ a{
   text-overflow: ellipsis;
 }
 .menu-content h3,
- .menu-content p {
-  font-size: 0.9rem;
+.menu-content p {
+  font-size: 0.85rem;
   margin-bottom: 5px;
   margin-top: 5px;
   white-space: nowrap;
@@ -504,7 +504,7 @@ a{
   text-overflow: ellipsis;
 }
  .price {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-weight: bold;
   align-self: flex-end;
   margin:  15px;
@@ -591,10 +591,6 @@ transition: 0.3s;
     object-fit: cover;
     height: 350px;
   }
-  
-  
-  
-  
   #button-commander{
     margin-left: 41%;
   }
@@ -647,10 +643,19 @@ transition: 0.3s;
       -o-transition: 0.4s;
       transition: 0.4s;
     }
+    .restaurant-title {
+      margin-left: 2%;
+    }
     .menu-content h3,
     .menu-content p {
-    font-size: 1.1rem;
+     font-size: 0.88rem;
     }
+    .price {
+     font-size: 0.88rem;
+  
+    }
+    
+
     .menu-detail{
       display: flex;
       flex-direction: row;
@@ -658,18 +663,10 @@ transition: 0.3s;
       justify-content: center;
       align-items: stretch;
       align-content: stretch;
-      padding: 0;
     }
-    .choice-1,
-    .choice-2,
-    .choice-3,
-    .choice-4{
-      width: 60%;
-      
-    }
-    
     #button-commander{
-      margin-left: 43%;
+      margin-left: 44%;
+      margin-top: 3%;
     }
     
     
@@ -713,17 +710,31 @@ transition: 0.3s;
       align-items: stretch;
       align-content: stretch;
     }
-    
-    
     .choice-1,
     .choice-2,
     .choice-3,
-    .choice-4{
-      width: 98%;
+    .choice-4 {
+      width: 96%;
+    }
+    .restaurant-title {
+      font-size: 1.8rem;
+      margin-left: 2%;
+    }
+    .menu-title {
+      font-size: 1.4rem;
+    }
+    .menu-content h3,
+    .menu-content p {
+     font-size: 1.2rem;
+    }
+    .price {
+     font-size: 1.2rem;
+  
     }
     #button-commander{
       margin-left: 44.5%;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      margin-top: 3%;
     }
     
 
