--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,559 +1,12 @@
-@import "./utils/_variables";
-@import "./base/_base";
+@import "./utils/animations";
+@import "./utils/variables";
+@import "./base/base";
 @import "./layout/header\ ";
+@import "./layout/body";
 @import "./layout/footer\ "; 
   
 
-  #search {
-  text-align: center;
-  background-color: #f6f6f6;
-  width: 100%;
-  }
-  #search form {
-  background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
-  }
-   
-  .searchfield {
-  width: 120px;
-  padding: 16px 5px;
-  font-weight: bold;
-  border: none;
-  background-color: transparent;
-}
-#search .search-title {
-  font-size: 2em;
-  margin: 30px 30px 15px 30px;
-}
-#search .search-subtitle {
-  font-size: 1.2em;
-  font-weight: normal;
-  text-transform: initial;
-}
-.search-button {
-  cursor: pointer;
-  opacity: 0.8;
-  border: none;
-  border-radius: 25px;
-  padding: 16px 20px;
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 0.8rem;
-  margin: 20px 10px 40px 10px;
-  background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-  box-shadow: 3px 3px 10px #bfbfbf;
-}
-.search-button:hover {
-  opacity: 0.65;
-  transition: 0.3s;
-  box-shadow: 3px 3px 10px #0d0d0d ;
-  transition: 0.3s;
-}
-
-.loading-spinner {
-  width: 100%;
-  height: 110vh;
-  background: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  z-index: 9999;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-animation: transition 5s ease both;
-  animation: transition 5s ease both;
-  opacity: 1;
-}
-
-.loading-spinner .loader{
-  border-radius: 60px;
-  border: 5px solid transparent;
-  display: inline-block;
-  position: relative;
-  right: 5px;
-  left: 5px;
-  top: 5px;
-  bottom: 5px;
-  border-radius: 220px;
-  width: 300px;
-  height: 300px;
-  border: 8px solid transparent;
-  border-top-color: #9356DC;
-  border-bottom-color: #9356DC;
-  -webkit-animation: spin 800ms linear infinite;
-  animation: spin 800ms linear infinite;
-}
-
-.loading-spinner .loader:after {
-  content: '';
-  position: absolute;
-  right: 20px;
-  left: 20px;
-  top: 20px;
-  bottom: 20px;
-  border-radius: 200px;
-  border: 8px solid transparent;
-  border-right-color: #FF79DA;
-  border-left-color: #FF79DA;
-  -webkit-animation: spin-reverse 500ms linear infinite;
-  animation: spin-reverse 500ms linear infinite;
   
-}
-
- @-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes spin-reverse {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-            transform: rotate(-360deg);
-  }
-}
-
-@keyframes spin-reverse {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-            transform: rotate(-360deg);
-  }
-}
-
-@-webkit-keyframes transition {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    z-index: -1;
-  }
-}
-
-@keyframes transition {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    z-index: -1;
-  }
-}
-  @-webkit-keyframes checkslide {
-    0% {
-      transform: translateX(60px);
-    }
-    100% {
-      transform: translateX(0);
-    }
-  }
-  @keyframes checkslide {
-    0% {
-      transform: translateX(60px);
-    }
-    100% {
-      transform: translateX(0);
-    }
-  }
-  @-webkit-keyframes dishes {
-    from {
-      transform: scale(0);
-      opacity: 0;
-    }
-    to {
-      transform: scale(1);
-      opacity: 1;
-    }
-  }
-  @keyframes dishes {
-    from {
-      transform: scale(0);
-      opacity: 0;
-    }
-    to {
-      transform: scale(1);
-      opacity: 1;
-    }
-}
-
-
-#functionning h2 {
-  margin: 40px 20px 15px 30px;
-
-  }
-
-  #functionning ul {
-    
-    list-style-type: none;
-    counter-reset: liste-couleur;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 1;
-    
-   }
-  
- 
-#functionning ul li {
-  width: 76%;
-  background-color: #f6f6f6;
-  box-shadow: 3px 3px 10px #bfbfbf;
-  padding: 25px;
-  border-radius: 25px;
-  margin: 25px;
-  font-size: 0.95rem;
-  position: relative;
-  list-style-type:none ;
-  
-}
-
-#functionning ul li::before {
-  content: counter(liste-couleur);
-  counter-increment: liste-couleur;
-  color: white;
-  font-weight: bolder;
-  background-color: #9256dc;
-  border-radius: 100px;
-  padding: 5px 9px;
-  position: absolute;
-  left: -3%;
-  top: 29%;
-}
-#functionning ul li:hover  {
-  background-color:#f5edff ;
-  transition: 0.3s
-}
-#functionning ul :hover  {
-  color: #9256dc;
-}
-#functionning .step {
-  padding: 0 14px 0 8px;
-  font-weight: bold;
-}
-
-.restaurants h2 {
-  margin: 40px 20px 15px 30px;
-}
-.restaurants-cards h3 {
-  font-size: 1.2em;
-  margin: 8px 20px 0px 15px;
-  color: black;
-}
-a{
-  text-decoration: none;
-}
-.restaurants-cards p {
-  font-size: 1em;
-  margin: 5px 20px 0px 15px;
-  color: #0d0d0d;
-}
-.heart-empty {
-  position: absolute;
-  bottom: 18px;
-  right: 24px;
-  font-size: 1.6em;
-  color: #777777;
-}
-.heart-full {
-  position: absolute;
-  bottom: 18px;
-  right: 24px;
-  cursor: pointer;
-  opacity: 0;
-  z-index: 1;
-  font-size: 1.6em;
-}
-.heart-empty:hover {
-  animation: vide 1s forwards linear;
-  cursor: pointer;
-}
-.heart-empty:hover + i {
-  opacity: 1;
-  transform: scale(1);
-  transition: transform 1s linear;
-}
-.heart-full {
-  position: absolute;
-  opacity: 0;
-  background: linear-gradient( to top, #FF79DA, #9356DC);
-  -webkit-background-clip: text;
-  color: transparent;
-  transform-origin: padding;
-  transform: scale(0);
-}
-.restaurants .box-restaurant {
-  position: relative;
-  width: 90%;
-  height: 60vw;
-  margin: auto;
-  margin-top: 25px;
-  border-radius: 15px;
-  box-shadow: 3px 3px 10px #bfbfbf;
-  background-color: #ffffff;
- 
-}
-.restaurants .image-restaurant {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  width: 100%;
-  height: 70%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-.new {
-  color: #2c9c81;
-  background-color: #99e2d0;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  position: absolute;
-  top: 0.5em;
- right: 1em;
-  padding: 6.5px 9.5px;
-  font-size: 15px;
-  font-weight: bold;
-  border-radius: 2px;
-}
-.arrow{
-  font-size: 1.5rem;
-  margin-top: 30px;
-  margin-left: 20px;
-  color: #0d0d0d;
-}
-#background-image{
-  width: 100%; 
-  -o-object-fit: cover;
-  object-fit: cover;
-   
-}
-.menu-lanoteenchantee {
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 220px;
-}
-
-
-.restaurant-title {
-    font-family: "Shrikhand", cursive;
-    font-size: 1.6rem;
-    margin-left: 8%;
-  }
-  .restaurant-name {
-    background: #ffffff;
-    padding-top: 10px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    position: relative;
-    top: -35px;
-  }
-    
-  
-  
-.restaurant-name .heart {
-    position: relative;
-  }
-  
-
-.restaurant-name .heart-empty {
-  color: #777777;
-  position: absolute;
-  bottom: 7px;
-  right: 28px;
-  font-size: 1.6rem;
-}
-.restaurant-name .heart-full {
-  color: #777777;
-  position: absolute;
-  bottom: 7px;
-  right: 28px;
-  font-size: 1.6rem;
-}
-.restaurant-name .heart-full {
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-image: linear-gradient( to top, #FF79DA, #9356DC);
-  font-size: 1.6rem;
-  display: block;
-  position: absolute;
-  bottom: 7px;
-  right: 28px;
-  opacity: 0;
-}
-.menu-title {
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  font-weight: initial;
-  margin: 30px 20px;
-  position: relative;
-}
-.menu-title::before {
-  content: "";
-  position: absolute;
-  width: 95px;
-  height: 25px;
-  left: 0%;
-  border-bottom: 3px solid #99e2d0;
-}
- 
-.choice-1,
-.choice-2,
-.choice-3,
-.choice-4 {
-  width: 95%;
-  height:55px;
-  cursor: pointer;
-  background: #ffffff;
-  margin: 10px 12px;
-  padding: 5px 0;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 3px 3px 10px #bfbfbf;
-  display: flex;
-  justify-content: space-between;
-}
-.choice-1 .price-check,
-.choice-2 .price-check,
-.choice-3 .price-check,
-.choice-4 .price-check {
-  display: flex;
-  align-self: center;
-  transform: translateX(70px);
-}
-.choice-1:hover .price-check,
-.choice-2:hover .price-check,
-.choice-3:hover .price-check,
-.choice-4:hover .price-check {
-  -webkit-animation: checkslide 0.35s ease-in-out forwards;
-  animation: checkslide 0.35s ease-in-out forwards;
-}
-.choice-1 .checkicon,
-.choice-2 .checkicon,
-.choice-3 .checkicon,
-.choice-4 .checkicon {
-  display: inline-block;
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 20px;
-}
-.choice-1:hover .checkicon,
-.choice-2:hover .checkicon,
-.choice-3:hover .checkicon,
-.choice-4:hover .checkicon {
-  transform: rotate(2turn);
-  transition: 0.7s;
-}
-.choice-1 .checkbox,
-.choice-2 .checkbox,
-.choice-3 .checkbox,
-.choice-4 .checkbox {
-  align-self: center;
-  padding: 25px;
-  background-color: #99e2d0;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-.choice-1:hover .checkbox,
-.choice-2:hover .checkbox,
-.choice-3:hover .checkbox,
-.choice-4:hover .checkbox {
-  -webkit-animation: checkslide 0.35s ease-in-out forwards;
-  animation: checkslide 0.35s ease-in-out forwards;
-}
-.menu-content {
-  margin-left: 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.menu-content h3,
-.menu-content p {
-  font-size: 0.85rem;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
- .price {
-  font-size: 0.85rem;
-  font-weight: bold;
-  align-self: flex-end;
-  margin:  15px;
-}
-
-.entree {
-  transform: scale(0);
-  -webkit-animation: dishes 2s ease-in-out forwards;
-  animation: dishes 2s ease-in-out forwards;
-}
-
-.dish {
-  transform: scale(0);
-  -webkit-animation: dishes 2s ease-in-out 0.4s forwards;
-  animation: dishes 2s ease-in-out 0.4s forwards;
-}
-
-.dessert {
-  transform: scale(0);
-  -webkit-animation: dishes 2s ease-in-out 0.8s forwards;
-  animation: dishes 2s ease-in-out 0.8s forwards;
-}
-
-#button-commander{  
-  cursor: pointer;
-  opacity: 1;
-  border: none;
-  border-radius: 25px;
-  padding: 16px 20px;
-  color: #ffffff;
-  font-weight: bold;
-  margin-left: 36%;
-  margin-top: 10%;
-  font-size: 1rem;
-  
-  background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-  box-shadow: 3px 3px 10px #bfbfbf;
-}
-#button-commander:hover{
-opacity: 0.65;
-transition: 0.3s;
-box-shadow: 3px 3px 10px #0d0d0d ;
-transition: 0.3s;
-}
-
-
-
-
-
 @media screen  and (min-width: 577px){
   
   .restaurants-cards {
@@ -617,12 +70,7 @@ transition: 0.3s;
     form input{
       font-size: 1rem;
     }
-    footer{
-      font-size: 1.2rem;
-    }
-    
-  
-  #functionning ul {
+    #functionning ul {
       flex-direction: row;
       align-items: center;
       display: flex;
@@ -643,19 +91,6 @@ transition: 0.3s;
       -o-transition: 0.4s;
       transition: 0.4s;
     }
-    .restaurant-title {
-      margin-left: 2%;
-    }
-    .menu-content h3,
-    .menu-content p {
-     font-size: 0.88rem;
-    }
-    .price {
-     font-size: 0.88rem;
-  
-    }
-    
-
     .menu-detail{
       display: flex;
       flex-direction: row;
@@ -668,7 +103,9 @@ transition: 0.3s;
       margin-left: 44%;
       margin-top: 3%;
     }
-    
+    footer{
+      font-size: 1.2rem;
+    }
     
     
     
@@ -702,37 +139,18 @@ transition: 0.3s;
       height: 20vw;
       width: 47%;
     }
-    .menu-detail{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-items: stretch;
-      align-content: stretch;
-    }
-    .choice-1,
-    .choice-2,
-    .choice-3,
-    .choice-4 {
-      width: 96%;
-    }
-    .restaurant-title {
-      font-size: 1.8rem;
-      margin-left: 2%;
-    }
-    .menu-title {
-      font-size: 1.4rem;
-    }
+    
+    
+   
     .menu-content h3,
     .menu-content p {
-     font-size: 1.2rem;
+     font-size: 1em;
     }
     .price {
-     font-size: 1.2rem;
-  
+     font-size: 1em;
     }
     #button-commander{
-      margin-left: 44.5%;
+      margin-left: 44.7%;
       font-size: 1.1rem;
       margin-top: 3%;
     }
