--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,6 +44,9 @@
     object-fit: cover;
     height: 350px;
   }
+  .restaurant-title{
+    margin-left: 3%;
+  }
   #button-commander{
     margin-left: 41%;
   }
@@ -91,14 +94,6 @@
       -o-transition: 0.4s;
       transition: 0.4s;
     }
-    .menu-detail{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-items: stretch;
-      align-content: stretch;
-    }
     #button-commander{
       margin-left: 44%;
       margin-top: 3%;
@@ -107,11 +102,19 @@
       font-size: 1.2rem;
     }
     
-    
-    
-    
-  
-  }
+    }
+
+
+  @media screen and (min-width: 1156px) {
+    .menu-detail {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: stretch;
+      align-content: stretch;
+    }
+  }  
   @media screen and (min-width: 1440px) {
     #search form .searchfield {
       width: 17vw;
@@ -141,28 +144,11 @@
     }
     
     
-   
-    .menu-content h3,
-    .menu-content p {
-     font-size: 1em;
-    }
-    .price {
-     font-size: 1em;
-    }
     #button-commander{
       margin-left: 44.7%;
       font-size: 1.1rem;
       margin-top: 3%;
     }
-    
-
-   
-   
-  
-    
-    
-   
-    
     
   }
     
