--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@
 }
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -387,7 +388,7 @@ a {
 
 .restaurant-title {
   font-family: "Shrikhand", cursive;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   margin-left: 8%;
 }
 
@@ -453,7 +454,7 @@ a {
 .choice-2,
 .choice-3,
 .choice-4 {
-  width: 95%;
+  width: 92%;
   height: 55px;
   cursor: pointer;
   background: #ffffff;
@@ -641,6 +642,10 @@ footer ul li .fas {
     height: 350px;
   }
 
+  .restaurant-title {
+    margin-left: 3%;
+  }
+
   #button-commander {
     margin-left: 41%;
   }
@@ -690,15 +695,6 @@ footer ul li .fas {
     transition: 0.4s;
   }
 
-  .menu-detail {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: stretch;
-    align-content: stretch;
-  }
-
   #button-commander {
     margin-left: 44%;
     margin-top: 3%;
@@ -706,6 +702,16 @@ footer ul li .fas {
 
   footer {
     font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 1156px) {
+  .menu-detail {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -739,15 +745,6 @@ footer ul li .fas {
   .restaurants .box-restaurant {
     height: 20vw;
     width: 47%;
-  }
-
-  .menu-content h3,
-.menu-content p {
-    font-size: 1em;
-  }
-
-  .price {
-    font-size: 1em;
   }
 
   #button-commander {
