--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -45,7 +45,7 @@
   
   .loading-spinner {
     width: 100%;
-    height: 110vh;
+    height: 120vh;
     background: rgba(255, 255, 255, 0.5);
     position: absolute;
     z-index: 9999;
@@ -63,16 +63,15 @@
     opacity: 1;
   }
   
-  .loading-spinner .loader{
-    border-radius: 60px;
+  .loading-spinner .loader {
     border: 5px solid transparent;
     display: inline-block;
     position: relative;
-    right: 5px;
-    left: 5px;
-    top: 5px;
-    bottom: 5px;
-    border-radius: 220px;
+    right: 10px;
+    left: 10px;
+    top: 10px;
+    bottom: 10px;
+    border-radius: 50%;
     width: 300px;
     height: 300px;
     border: 8px solid transparent;
@@ -83,19 +82,18 @@
   }
   
   .loading-spinner .loader:after {
-    content: '';
+    content: "";
     position: absolute;
     right: 20px;
     left: 20px;
     top: 20px;
     bottom: 20px;
-    border-radius: 200px;
+    border-radius: 50%;
     border: 8px solid transparent;
     border-right-color: #FF79DA;
     border-left-color: #FF79DA;
     -webkit-animation: spin-reverse 500ms linear infinite;
     animation: spin-reverse 500ms linear infinite;
-    
   }
   
    
@@ -392,9 +390,11 @@
   .menu-content h3,
   .menu-content p {
     font-size: 0.85rem;
-    margin-bottom: 5px;
-    margin-top: 5px;
-   
+  margin-bottom: 5px;
+  margin-top: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   }
    .price {
     font-size: 0.85rem;
