--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ header .logo-home {
 
 .loading-spinner {
   width: 100%;
-  height: 110vh;
+  height: 120vh;
   background: rgba(255, 255, 255, 0.5);
   position: absolute;
   z-index: 9999;
@@ -187,15 +187,14 @@ header .logo-home {
 }
 
 .loading-spinner .loader {
-  border-radius: 60px;
   border: 5px solid transparent;
   display: inline-block;
   position: relative;
-  right: 5px;
-  left: 5px;
-  top: 5px;
-  bottom: 5px;
-  border-radius: 220px;
+  right: 10px;
+  left: 10px;
+  top: 10px;
+  bottom: 10px;
+  border-radius: 50%;
   width: 300px;
   height: 300px;
   border: 8px solid transparent;
@@ -212,7 +211,7 @@ header .logo-home {
   left: 20px;
   top: 20px;
   bottom: 20px;
-  border-radius: 200px;
+  border-radius: 50%;
   border: 8px solid transparent;
   border-right-color: #FF79DA;
   border-left-color: #FF79DA;
@@ -533,6 +532,9 @@ a {
   font-size: 0.85rem;
   margin-bottom: 5px;
   margin-top: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .price {
@@ -654,7 +656,7 @@ footer ul li .fas {
     text-align: center;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1156px) {
   header .logo-home {
     width: 30%;
   }
@@ -695,16 +697,10 @@ footer ul li .fas {
     transition: 0.4s;
   }
 
-  #button-commander {
-    margin-left: 44%;
-    margin-top: 3%;
+  .restaurant-title {
+    font-size: 1.8em;
   }
 
-  footer {
-    font-size: 1.2rem;
-  }
-}
-@media screen and (min-width: 1156px) {
   .menu-detail {
     display: flex;
     flex-direction: row;
@@ -712,6 +708,16 @@ footer ul li .fas {
     justify-content: center;
     align-items: stretch;
     align-content: stretch;
+    margin-left: 1%;
+  }
+
+  #button-commander {
+    margin-left: 44%;
+    margin-top: 3%;
+  }
+
+  footer {
+    font-size: 1.1rem;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -747,10 +753,25 @@ footer ul li .fas {
     width: 47%;
   }
 
+  .menu-content h3,
+.menu-content p {
+    font-size: 1.1em;
+  }
+
+  .price {
+    font-size: 1.1em;
+  }
+
+  .choice-1,
+.choice-2,
+.choice-3,
+.choice-4 {
+    height: 70px;
+  }
+
   #button-commander {
     margin-left: 44.7%;
     font-size: 1.1rem;
-    margin-top: 3%;
   }
 }
 
