--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,11 @@
 @import "./utils/animations";
 @import "./utils/variables";
+
 @import "./base/base";
+
 @import "./layout/header\ ";
 @import "./layout/body";
-@import "./layout/footer\ "; 
+@import "./layout/footer\ ";
  
 
   
@@ -106,8 +108,6 @@
       align-content: stretch;
       margin-left: 1%;
     }
-    
-    
     #button-commander{
       margin-left: 44%;
       margin-top: 3%;
@@ -159,6 +159,7 @@
     .choice-3,
     .choice-4{
       height: 70px;
+      width: 94%;
     }
     
     #button-commander{
@@ -166,6 +167,14 @@
       font-size: 1.1rem;
     }
     }
+
+    @media screen and (min-width: 2560px) {
+      #button-commander{
+        margin-left: 47%;
+        
+      }
+      } 
+    
     
     
     
