--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header .logo-home {
 }
 
 #functionning ul li {
-  width: 76%;
+  width: 90%;
   background-color: #f6f6f6;
   box-shadow: 3px 3px 10px #bfbfbf;
   padding: 25px;
@@ -242,6 +242,7 @@ header .logo-home {
   font-size: 0.95rem;
   position: relative;
   list-style-type: none;
+  margin-left: 5px;
 }
 
 #functionning ul li::before {
@@ -529,7 +530,7 @@ a {
 
 .menu-content h3,
 .menu-content p {
-  font-size: 0.85rem;
+  font-size: 0.85em;
   margin-bottom: 5px;
   margin-top: 5px;
   white-space: nowrap;
