--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -48,7 +48,7 @@
   
   .loading-spinner {
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     background: rgba(255, 255, 255, 0.5);
     position: absolute;
     z-index: 9999;
@@ -56,47 +56,47 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-animation: transition 5s ease both;
-    animation: transition 5s ease both;
-    opacity: 1;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-animation: transition 3s ease both;
+            animation: transition 3s ease both;
   }
   
   .loading-spinner .loader {
+    
     border: 5px solid transparent;
     display: inline-block;
     position: relative;
-    right: 10px;
-    left: 10px;
-    top: 10px;
-    bottom: 10px;
+    right: 5px;
+    left: 5px;
+    top: 5px;
+    bottom: 5px;
     border-radius: 50%;
     width: 400px;
     height: 400px;
-    border: 15px solid transparent;
-    border-top-color: $color-primary;
-    border-bottom-color: $color-primary;
+    border: 10px solid transparent;
+    border-top-color: #9356DC;
+    border-bottom-color: #9356DC;
     -webkit-animation: spin 800ms linear infinite;
     animation: spin 800ms linear infinite;
   }
   
   .loading-spinner .loader:after {
-    content: "";
+    content: '';
     position: absolute;
-    right: 10px;
-    left: 10px;
-    top: 10px;
-    bottom: 10px;
+    right: 5px;
+    left: 5px;
+    top: 5px;
+    bottom: 5px;
     border-radius: 50%;
-    border: 15px solid transparent;
-    border-right-color: $color-secondary;
-    border-left-color: $color-secondary;
-    -webkit-animation: spin-reverse 500ms linear infinite;
-    animation: spin-reverse 500ms linear infinite;
+    border: 10px solid transparent;
+    border-right-color: #FF79DA;
+    border-left-color: #FF79DA;
+    -webkit-animation: spin-reverse 400ms linear infinite;
+    animation: spin-reverse 400ms linear infinite;
   }
   
    
