--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ header .logo-home {
 
 .loading-spinner {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.5);
   position: absolute;
   z-index: 9999;
@@ -181,25 +181,24 @@ header .logo-home {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-animation: transition 5s ease both;
-  animation: transition 5s ease both;
-  opacity: 1;
+  -webkit-animation: transition 3s ease both;
+  animation: transition 3s ease both;
 }
 
 .loading-spinner .loader {
   border: 5px solid transparent;
   display: inline-block;
   position: relative;
-  right: 10px;
-  left: 10px;
-  top: 10px;
-  bottom: 10px;
+  right: 5px;
+  left: 5px;
+  top: 5px;
+  bottom: 5px;
   border-radius: 50%;
   width: 400px;
   height: 400px;
-  border: 15px solid transparent;
-  border-top-color: #9256dc;
-  border-bottom-color: #9256dc;
+  border: 10px solid transparent;
+  border-top-color: #9356DC;
+  border-bottom-color: #9356DC;
   -webkit-animation: spin 800ms linear infinite;
   animation: spin 800ms linear infinite;
 }
@@ -207,16 +206,16 @@ header .logo-home {
 .loading-spinner .loader:after {
   content: "";
   position: absolute;
-  right: 10px;
-  left: 10px;
-  top: 10px;
-  bottom: 10px;
+  right: 5px;
+  left: 5px;
+  top: 5px;
+  bottom: 5px;
   border-radius: 50%;
-  border: 15px solid transparent;
-  border-right-color: #ff79da;
-  border-left-color: #ff79da;
-  -webkit-animation: spin-reverse 500ms linear infinite;
-  animation: spin-reverse 500ms linear infinite;
+  border: 10px solid transparent;
+  border-right-color: #FF79DA;
+  border-left-color: #FF79DA;
+  -webkit-animation: spin-reverse 400ms linear infinite;
+  animation: spin-reverse 400ms linear infinite;
 }
 
 #functionning h2 {
