--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -34,18 +34,15 @@
     font-size: 0.8rem;
     margin: 20px 10px 40px 10px;
     background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-    box-shadow: 3px 3px 10px #bfbfbf;
+    box-shadow: 3px 3px 10px black;
   }
   
   .search-button:hover {
     opacity: 0.65;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d;
+    box-shadow: 3px 3px 10px  ;
     transition: 0.3s;
   }
-  
-  
-  
   .loading-spinner {
     width: 100%;
     height: 100vh;
@@ -56,17 +53,16 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-animation: transition 3s ease both;
-            animation: transition 3s ease both;
+    animation: transition 3s ease both;
   }
   
   .loading-spinner .loader {
-    
     border: 5px solid transparent;
     display: inline-block;
     position: relative;
@@ -85,7 +81,7 @@
   }
   
   .loading-spinner .loader:after {
-    content: '';
+    content: "";
     position: absolute;
     right: 5px;
     left: 5px;
@@ -99,7 +95,6 @@
     animation: spin-reverse 400ms linear infinite;
   }
   
-   
   
   #functionning h2 {
     margin: 40px 20px 15px 30px;
@@ -188,13 +183,13 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 1s forwards linear;
+    animation: vide 0.3s forwards linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 1s linear;
+    transition: transform 0.3s linear;
   }
   .heart-full {
     position: absolute;
@@ -208,7 +203,7 @@
   .restaurants .box-restaurant {
     position: relative;
     width: 90%;
-    height: 60vw;
+    height: 62vw;
     margin: auto;
     margin-top: 25px;
     border-radius: 15px;
@@ -225,7 +220,7 @@
     object-fit: cover;
   }
   .new {
-    color: #2c9c81;
+    
     background-color: #99e2d0;
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -235,9 +230,10 @@
    right: 1em;
     padding: 6.5px 9.5px;
     font-size: 15px;
-    font-weight: bold;
+    
     border-radius: 2px;
   }
+  
   .arrow{
     font-size: 1.5rem;
     margin-top: 30px;
