--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -45,19 +45,11 @@
   }
   .loading-spinner {
     width: 100%;
-    height: 100vh;
+    height: 60vh;
     background: rgba(255, 255, 255, 0.5);
     position: absolute;
     z-index: 9999;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    
     -webkit-animation: transition 3s ease both;
     animation: transition 3s ease both;
   }
@@ -306,11 +298,12 @@
     font-weight: initial;
     margin: 30px 20px;
     position: relative;
+    font-family: "roboto", sans-serif;
   }
   .menu-title::before {
     content: "";
     position: absolute;
-    width: 95px;
+    width: 45px;
     height: 25px;
     left: 0%;
     border-bottom: 3px solid #99e2d0;
@@ -402,7 +395,10 @@
     margin:  15px;
   }
   
-  .entree {
+  .choice-1,
+  .choice-2,
+  .choice-3,
+  .choice-4 {
     transform: scale(0);
     -webkit-animation: dishes 2s ease-in-out forwards;
     animation: dishes 2s ease-in-out forwards;
