--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -2,9 +2,10 @@ header {
   display: flex;
   & .logo-home {
     width: 64vmin;
+    font-size: 2rem;
     margin: auto;
     padding: 18px;
-    
+    font-family: "Shrikhand", cursive;
   }
 }
   
