--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,10 @@ header {
 }
 header .logo-home {
   width: 64vmin;
+  font-size: 2rem;
   margin: auto;
   padding: 18px;
+  font-family: "Shrikhand", cursive;
 }
 
 #search {
@@ -156,13 +158,13 @@ header .logo-home {
   font-size: 0.8rem;
   margin: 20px 10px 40px 10px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-  box-shadow: 3px 3px 10px black;
+  box-shadow: 3px 3px 10px #bfbfbf;
 }
 
 .search-button:hover {
-  opacity: 0.65;
+  opacity: 0.75;
   transition: 0.3s;
-  box-shadow: 3px 3px 10px;
+  box-shadow: 3px 3px 10px #0d0d0d;
   transition: 0.3s;
 }
 
@@ -469,8 +471,8 @@ a {
 .choice-2:hover .price-check,
 .choice-3:hover .price-check,
 .choice-4:hover .price-check {
-  -webkit-animation: checkslide 0.35s ease-in-out forwards;
-  animation: checkslide 0.35s ease-in-out forwards;
+  -webkit-animation: checkslide 0.45s ease-in-out forwards;
+  animation: checkslide 0.45s ease-in-out forwards;
 }
 
 .choice-1 .checkicon,
@@ -488,7 +490,7 @@ a {
 .choice-3:hover .checkicon,
 .choice-4:hover .checkicon {
   transform: rotate(2turn);
-  transition: 0.7s;
+  transition: 0.8s;
 }
 
 .choice-1 .checkbox,
@@ -506,8 +508,8 @@ a {
 .choice-2:hover .checkbox,
 .choice-3:hover .checkbox,
 .choice-4:hover .checkbox {
-  -webkit-animation: checkslide 0.35s ease-in-out forwards;
-  animation: checkslide 0.35s ease-in-out forwards;
+  -webkit-animation: checkslide 0.45s ease-in-out forwards;
+  animation: checkslide 0.45s ease-in-out forwards;
 }
 
 .menu-content {
@@ -541,18 +543,6 @@ a {
   transform: scale(0);
   -webkit-animation: dishes 2s ease-in-out forwards;
   animation: dishes 2s ease-in-out forwards;
-}
-
-.dish {
-  transform: scale(0);
-  -webkit-animation: dishes 2s ease-in-out 0.4s forwards;
-  animation: dishes 2s ease-in-out 0.4s forwards;
-}
-
-.dessert {
-  transform: scale(0);
-  -webkit-animation: dishes 2s ease-in-out 0.8s forwards;
-  animation: dishes 2s ease-in-out 0.8s forwards;
 }
 
 #button-commander {
