--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -13,6 +13,7 @@
     font-weight: bold;
     border: none;
     background-color: transparent;
+    
   }
   #search .search-title {
     font-size: 2em;
@@ -22,10 +23,11 @@
     font-size: 1.2em;
     font-weight: normal;
     text-transform: initial;
+    font-family: "roboto", sans-serif;
   }
   .search-button {
     cursor: pointer;
-    opacity: 0.8;
+    opacity: 1;
     border: none;
     border-radius: 25px;
     padding: 16px 20px;
@@ -38,9 +40,9 @@
   }
   
   .search-button:hover {
-    opacity: 0.85;
+    opacity: 0.95;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d ;
+    box-shadow: 3px 3px 10px black ;
     transition: 0.3s;
   }
   
@@ -92,7 +94,7 @@
     background-color:#f5edff ;
     transition: 0.3s
   }
-  #functionning ul :hover  {
+  #functionning ul  :hover  {
     color: $color-primary;
   }
   #functionning .step {
@@ -133,13 +135,13 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 0.3s forwards linear;
+    animation: vide 0.2s forwards linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 0.3s linear;
+    transition: transform 0.2s linear;
   }
   .heart-full {
     position: absolute;
@@ -378,9 +380,9 @@
   }
   
   #button-commander:hover {
-    opacity: 0.9;
+    opacity: 0.95;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d ;
+    box-shadow: 3px 3px 10px black ;
     transition: 0.3s;
     
   }
