--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -1,10 +1,14 @@
 header {
   display: flex;
   & .logo-home {
-    width: 64vmin;
-    font-size: 1.6rem;
+    height: 55px;
+    width: 100%;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6em;
     margin: auto;
-    padding: 18px;
     font-family: "Shrikhand", cursive;
   }
 }
