--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,20 +1,33 @@
 #search {
-    text-align: center;
-    background-color: #f6f6f6;
-    width: 100%;
-    }
-    #search form {
-    background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
-    }
-     
-    .searchfield {
-    width: 120px;
-    padding: 16px 5px;
-    font-weight: bold;
-    border: none;
-    background-color: transparent;
-    
-  }
+  text-align: center;
+  background-color: #f6f6f6;
+  width: 100%;
+}
+#search .location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
+  padding: 16px 5px;
+  
+  
+}
+ .location .fas{
+  margin-left: -2em;
+  font-size: 1.1rem;
+}
+#search .location p {
+  font-size: 1.1rem;
+  margin-left: 1em;
+  font-weight: bold;
+}
+
   #search .search-title {
     font-size: 2em;
     margin: 30px 30px 15px 30px;
@@ -40,7 +53,7 @@
   }
   
   .search-button:hover {
-    opacity: 0.92;
+    opacity: 0.85;
     transition: 0.3s;
     box-shadow: 3px 3px 10px black ;
     transition: 0.3s;
@@ -135,13 +148,13 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 0.2s forwards linear;
+    animation: vide 0.25s forwards linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 0.2s linear;
+    transition: transform 0.25s linear;
   }
   .heart-full {
     position: absolute;
