--- a/css/style.css
+++ b/css/style.css
@@ -128,16 +128,29 @@ header .logo-home {
   width: 100%;
 }
 
-#search form {
+#search .location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
+  padding: 16px 5px;
 }
 
-.searchfield {
-  width: 120px;
-  padding: 16px 5px;
+.location .fas {
+  margin-left: -2em;
+  font-size: 1.1rem;
+}
+
+#search .location p {
+  font-size: 1.1rem;
+  margin-left: 1em;
   font-weight: bold;
-  border: none;
-  background-color: transparent;
 }
 
 #search .search-title {
@@ -167,7 +180,7 @@ header .logo-home {
 }
 
 .search-button:hover {
-  opacity: 0.92;
+  opacity: 0.85;
   transition: 0.3s;
   box-shadow: 3px 3px 10px black;
   transition: 0.3s;
@@ -265,14 +278,14 @@ a {
 }
 
 .heart-empty:hover {
-  animation: vide 0.2s forwards linear;
+  animation: vide 0.25s forwards linear;
   cursor: pointer;
 }
 
 .heart-empty:hover + i {
   opacity: 1;
   transform: scale(1);
-  transition: transform 0.2s linear;
+  transition: transform 0.25s linear;
 }
 
 .heart-full {
