--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -1,15 +1,24 @@
 header {
   display: flex;
   & .logo-home {
-    height: 55px;
-    width: 100%;
+    height: 90px;
+    width: 90%;
+    max-width: 1440px;
     position: relative;
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.6em;
     margin: auto;
+    padding-top: 10px;
     font-family: "Shrikhand", cursive;
+  }
+  .arrow{
+    font-size: 1.4rem;
+    margin-top: 30px;
+    margin-left: 0;
+  
+  
   }
 }
   
