--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -36,7 +36,7 @@
       margin-left: 3%;
     }
     #button-commander{
-      margin-left: 41%;
+      margin-left: 37%;
     }
     footer {
       text-align: center;
@@ -93,7 +93,7 @@
         margin-left: 1%;
       }
       #button-commander{
-        margin-left: 44%;
+        margin-left: 41%;
         margin-top: 3%;
       }
       footer{
@@ -147,8 +147,8 @@
       }
       
       #button-commander{
-        margin-left: 44.7%;
-        font-size: 1.1rem;
+        margin-left: 43%;
+        font-size: 1.2em;
       }
       }
   
