--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,3 +1,36 @@
+.loading-spinner {
+  position: fixed;
+  background: rgba(255, 255, 255, 0.95);
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-animation: loader 4s forwards;
+          animation: loader 4s forwards;
+}
+
+.loading-spinner::before {
+  content: "";
+  height: 350px;
+  width: 350px;
+  border-top: 16px solid #9356DC;
+  border-right:16px solid #FF79DA;
+  border-bottom: 16px solid #99E2D0;
+  border-left: 16px solid #bfbfbf;
+  border-radius: 100%;
+  -webkit-animation: loader_roll 4s linear;
+          animation: loader_roll 4s linear;
+}
+
+
 #search {
   text-align: center;
   background-color: #f6f6f6;
@@ -55,11 +88,12 @@
   }
   
   .search-button:hover {
-    opacity: 0.85;
+    opacity: 0.75;
     transition: 0.3s;
     box-shadow: 3px 3px 10px #0d0d0d ;
     transition: 0.3s;
   }
+  
   
   
   
@@ -105,12 +139,14 @@
     left: -3%;
     top: 29%;
   }
-  #functionning ul li :hover  {
+  #functionning ul  :hover  {
     background-color:#f5edff ;
     transition: 0.3s
   }
-  #functionning ul  :hover   {
+  
+  #functionning ul  :hover .step {
     color: $color-primary;
+    
   }
   #functionning .step {
     padding: 0 14px 0 8px;
@@ -263,12 +299,12 @@
   }
   .menu-title {
     text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: initial;
+    font-size: 1em;
+    font-weight: normal;
     margin: 30px 20px;
     position: relative;
-    font-family: "roboto", sans-serif;
-  }
+    font-family: "roboto",sans-serif 100;
+  } 
   .menu-title::before {
     content: "";
     position: absolute;
@@ -277,104 +313,102 @@
     left: 0%;
     border-bottom: 3px solid #99e2d0;
   }
-   
-  .choice-1,
-  .choice-2,
-  .choice-3,
-  .choice-4 {
+  .menu .choice {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu .choice-1,
+  .menu .choice-2,
+  .menu .choice-3,
+  .menu .choice-4 {
     width: 92%;
-    height:55px;
+    height: 55px;
     cursor: pointer;
     background: #ffffff;
     margin: 10px 12px;
     padding: 5px 0;
     border-radius: 15px;
-    justify-content: space-between;
+    overflow: hidden;
     box-shadow: 3px 3px 10px #bfbfbf;
     display: flex;
-    overflow: hidden;
-    
+    justify-content: space-between;
+    animation: transition 1000ms both;
   }
-  .choice-1 .price-check,
-  .choice-2 .price-check,
-  .choice-3 .price-check,
-  .choice-4 .price-check {
+  .menu .choice-1 .price-check,
+  .menu .choice-2 .price-check,
+  .menu .choice-3 .price-check,
+  .menu .choice-4 .price-check {
     display: flex;
     align-self: center;
-    transform: translateX(70px);
+    transform: translateX(60px);
   }
-  .choice-1:hover .price-check,
-  .choice-2:hover .price-check,
-  .choice-3:hover .price-check,
-  .choice-4:hover .price-check {
-    -webkit-animation: checkslide 0.45s ease-in-out forwards;
-    animation: checkslide 0.45s ease-in-out forwards;
+  .menu .choice-1:hover .price-check,
+  .menu .choice-2:hover .price-check,
+  .menu .choice-3:hover .price-check,
+  .menu .choice-4:hover .price-check {
+    -webkit-animation: checkslide 0.35s ease-in-out forwards;
+    animation: checkslide 0.35s ease-in-out forwards;
   }
-  .choice-1 .checkicon,
-  .choice-2 .checkicon,
-  .choice-3 .checkicon,
-  .choice-4 .checkicon {
+  .menu .choice-1 .checkicon,
+  .menu .choice-2 .checkicon,
+  .menu .choice-3 .checkicon,
+  .menu .choice-4 .checkicon {
     display: inline-block;
     color: #ffffff;
     font-weight: bold;
     font-size: 20px;
   }
-  .choice-1:hover .checkicon,
-  .choice-2:hover .checkicon,
-  .choice-3:hover .checkicon,
-  .choice-4:hover .checkicon {
-    transform: rotate(2turn);
-    transition: 0.8s;
+  .menu .choice-1:hover .checkicon,
+  .menu .choice-2:hover .checkicon,
+  .menu .choice-3:hover .checkicon,
+  .menu .choice-4:hover .checkicon {
+    transform: rotate(1turn);
+    transition: 0.7s;
   }
-  .choice-1 .checkbox,
-  .choice-2 .checkbox,
-  .choice-3 .checkbox,
-  .choice-4 .checkbox {
+  .menu .choice-1 .checkbox,
+  .menu .choice-2 .checkbox,
+  .menu .choice-3 .checkbox,
+  .menu .choice-4 .checkbox {
     align-self: center;
-    padding: 20px;
+    padding: 17px;
     background-color: #99e2d0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
   }
-  .choice-1:hover .checkbox,
-  .choice-2:hover .checkbox,
-  .choice-3:hover .checkbox,
-  .choice-4:hover .checkbox {
-    -webkit-animation: checkslide 0.45s ease-in-out forwards;
-    animation: checkslide 0.45s ease-in-out forwards;
+  .menu .choice-1:hover .checkbox,
+  .menu .choice-2:hover .checkbox,
+  .menu .choice-3:hover .checkbox,
+  .menu .choice-4:hover .checkbox {
+    -webkit-animation: checkslide 0.35s ease-in-out forwards;
+    animation: checkslide 0.35s ease-in-out forwards;
   }
-  .menu-content {
-    margin-left: 5px;
+  .menu .menu-content {
+    margin-left: 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  .menu-content h3,
-  .menu-content p {
-    font-size: 0.85em;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  .menu .menu-content h3,
+  .menu .menu-content p {
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
-   .price {
+  .menu .price {
     font-size: 0.85rem;
     font-weight: bold;
     align-self: flex-end;
-    margin:  15px;
-  }
-  
-  .choice-1,
-  .choice-2,
-  .choice-3,
-  .choice-4 {
-    transform: scale(0);
-    -webkit-animation: dishes 2s ease-in-out forwards;
-    animation: dishes 2s ease-in-out forwards;
+    margin: 8px 20px;
   }
   
   
+  
+
+
   #button-commander {
     cursor: pointer;
     opacity: 1;
@@ -391,12 +425,20 @@
     background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
     box-shadow: 3px 3px 10px #bfbfbf;
   }
+ 
+  
   
   #button-commander:hover {
-    opacity: 0.95;
+    opacity: 0.90;
     transition: 0.3s;
     box-shadow: 3px 3px 10px #0d0d0d ;
     transition: 0.3s;
     
   }
+  
+
+
+  
+
+  
   
