--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -1,7 +1,7 @@
 header {
   display: flex;
   & .logo-home {
-    height: 90px;
+    height: 100px;
     width: 90%;
     max-width: 1440px;
     position: relative;
@@ -15,8 +15,8 @@ header {
   }
   .arrow{
     font-size: 1.4rem;
-    margin-top: 30px;
-    margin-left: 0;
+    margin-top: 45px;
+    margin-left: 1%;
     color: #0d0d0d;
   
   
