--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -19,12 +19,12 @@
 
 .loading-spinner::before {
   content: "";
-  height: 350px;
-  width: 350px;
-  border-top: 16px solid #9356DC;
-  border-right:16px solid #FF79DA;
-  border-bottom: 16px solid #99E2D0;
-  border-left: 16px solid #bfbfbf;
+  height: 330px;
+  width: 330px;
+  border-top: 15px solid $color-primary ;
+  border-right:15px solid $color-secondary;
+  border-bottom: 15px solid $color-tertiary;
+  border-left: 15px solid $color-shadow;
   border-radius: 100%;
   -webkit-animation: loader_roll 4s linear;
           animation: loader_roll 4s linear;
@@ -33,7 +33,7 @@
 
 #search {
   text-align: center;
-  background-color: #f6f6f6;
+  background-color:$backgroundcolor-main ;
   width: 100%;
 }
 #search .location {
@@ -67,10 +67,10 @@
   }
   #search .search-subtitle {
     font-size: 1.2em;
-    font-weight:normal;
+    font-weight:normal ;
     text-transform: initial;
-    font-family: "roboto",100;
-    color:grey;
+    font-family: "roboto-light",100 ;
+    
 
   }
   .search-button {
@@ -79,16 +79,16 @@
     border: none;
     border-radius: 25px;
     padding: 16px 20px;
-    color: #ffffff;
+    color:$color-light ;
     font-weight: bold;
     font-size: 0.8rem;
     margin: 20px 10px 40px 10px;
-    background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
+    background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
     box-shadow: 3px 3px 10px #bfbfbf;
   }
   
   .search-button:hover {
-    opacity: 0.75;
+    opacity: 0.80;
     transition: 0.3s;
     box-shadow: 3px 3px 10px #0d0d0d ;
     transition: 0.3s;
@@ -116,8 +116,8 @@
    
      #functionning ul li {
       width: 90%;
-      background-color: #f6f6f6;
-      box-shadow: 3px 3px 10px #bfbfbf;
+      background-color: $backgroundcolor-main;
+      box-shadow: 3px 3px 10px $color-shadow;
       padding: 25px;
       border-radius: 25px;
       margin: 25px;
@@ -167,7 +167,7 @@
   .restaurants-cards p {
     font-size: 1em;
     margin: 5px 20px 0px 15px;
-    color: #0d0d0d;
+    color:  #0d0d0d;
   }
   .heart-empty {
     position: absolute;
@@ -186,18 +186,18 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 0.25s forwards linear;
+    animation: vide 0.10s forwards linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 0.25s linear;
+    transition: transform 0.10s linear;
   }
   .heart-full {
     position: absolute;
     opacity: 0;
-    background: linear-gradient( to top, #FF79DA, #9356DC);
+    background:linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
     color: transparent;
     transform-origin: padding;
@@ -289,7 +289,7 @@
   .restaurant-name .heart-full {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    background-image: linear-gradient( to top, #FF79DA, #9356DC);
+    background-image: linear-gradient( 177deg, #FF79DA, #9356DC);
     font-size: 1.6rem;
     display: block;
     position: absolute;
@@ -303,15 +303,15 @@
     font-weight: normal;
     margin: 30px 20px;
     position: relative;
-    font-family: "roboto",sans-serif 100;
+    font-family: "roboto",sans-serif ,100;
   } 
   .menu-title::before {
     content: "";
     position: absolute;
-    width: 45px;
+    width: 41px;
     height: 20px;
     left: 0%;
-    border-bottom: 3px solid #99e2d0;
+    border-bottom: 3px solid $color-tertiary;
   }
   .menu .choice {
     display: flex;
@@ -323,7 +323,7 @@
   .menu .choice-3,
   .menu .choice-4 {
     width: 92%;
-    height: 55px;
+    height: 60px;
     cursor: pointer;
     background: #ffffff;
     margin: 10px 12px;
@@ -333,7 +333,13 @@
     box-shadow: 3px 3px 10px #bfbfbf;
     display: flex;
     justify-content: space-between;
-    animation: transition 1000ms both;
+   
+  }
+  .choice-1,
+  .choice-2,
+  .choice-3,
+  .choice-4 {
+    animation: transition 1500ms both;
   }
   .menu .choice-1 .price-check,
   .menu .choice-2 .price-check,
@@ -347,8 +353,8 @@
   .menu .choice-2:hover .price-check,
   .menu .choice-3:hover .price-check,
   .menu .choice-4:hover .price-check {
-    -webkit-animation: checkslide 0.35s ease-in-out forwards;
-    animation: checkslide 0.35s ease-in-out forwards;
+    -webkit-animation: checkslide 0.45s ease-in-out forwards;
+    animation: checkslide 0.45s ease-in-out forwards;
   }
   .menu .choice-1 .checkicon,
   .menu .choice-2 .checkicon,
@@ -371,17 +377,18 @@
   .menu .choice-3 .checkbox,
   .menu .choice-4 .checkbox {
     align-self: center;
-    padding: 17px;
+    padding: 25px;
     background-color: #99e2d0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    width: 10px;
   }
   .menu .choice-1:hover .checkbox,
   .menu .choice-2:hover .checkbox,
   .menu .choice-3:hover .checkbox,
   .menu .choice-4:hover .checkbox {
-    -webkit-animation: checkslide 0.35s ease-in-out forwards;
-    animation: checkslide 0.35s ease-in-out forwards;
+    -webkit-animation: checkslide 0.45s ease-in-out forwards;
+    animation: checkslide 0.45s ease-in-out forwards;
   }
   .menu .menu-content {
     margin-left: 10px;
@@ -391,50 +398,46 @@
   }
   .menu .menu-content h3,
   .menu .menu-content p {
-    font-size: 0.9rem;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    margin-top: 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-family: "roboto",sans-serif;
   }
   .menu .price {
     font-size: 0.85rem;
     font-weight: bold;
     align-self: flex-end;
-    margin: 8px 20px;
+    margin: 10px 20px;
   }
-  
-  
-  
-
-
   #button-commander {
     cursor: pointer;
     opacity: 1;
     border: none;
     border-radius: 25px;
     justify-content: center;
-    
     padding: 16px 50px;
     color: $color-light;
     font-weight: bold;
-    margin-left: 23%;
+    margin-left: 27%;
     margin-top: 10%;
     font-size: 1rem;
-    background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-    box-shadow: 3px 3px 10px #bfbfbf;
+    background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
+    box-shadow: 3px 3px 10px $color-shadow;
   }
- 
-  
-  
   #button-commander:hover {
-    opacity: 0.90;
+    opacity: 0.75;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d ;
+    box-shadow: 3px 3px 10px #0d0d0d;
     transition: 0.3s;
-    
   }
+
+
+  
+
+
   
 
 
