--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -68,8 +68,8 @@
       .search-button {
         font-size: 1rem;
       }
-      form input{
-        font-size: 1rem;
+      #search .location p {
+        font-size: 1.2em;
       }
       #functionning ul {
         flex-direction: row;
@@ -147,11 +147,13 @@
       
       .menu .menu-content h3,
       .menu .menu-content p {
-        font-size: 1.1em;
+        font-size: 1em;
       }
       .menu .price {
         font-size: 1em;
       }
+      
+      
       #button-commander{
         margin-left: 43%;
         font-size: 1.2em;
